--- a/sample.bib
+++ b/sample.bib
@@ -21,19 +21,27 @@
    note = "[Online; accessed 27-January-2022]"
  }
  @misc{docker:overview,
-   author = "Docker Inc.",
+   author = {Docker},
    title = "{Docker overview}",
    year = "2022",
    howpublished = {\url{https://docs.docker.com/get-started/overview/}},
    note = "[Online; accessed 28-January-2022]"
  }
  @misc{aquasec:docker_architecture,
-  author = "Aqua Security",
+  author = {{Aqua Security}},
   title = "Docker Architecture",
-  year = "2022,
+  year = "2022",
   howpublished = {\url{https://www.aquasec.com/cloud-native-academy/docker-container/docker-architecture/}},
   note = "[Online; accessed 05-February-2022]"
 }
+ @misc{aquasec:orchestration,
+  author = {{Aqua Security}},
+  title = "Docker Orchestration",
+  year = "2022",
+  howpublished = {\url{https://www.aquasec.com/cloud-native-academy/docker-container/docker-orchestration/}},
+  note = "[Online; accessed 10-February-2022]"
+}
+
 @inproceedings{Jabbari_devops,
 author = {Jabbari, Ramtin and bin Ali, Nauman and Petersen, Kai and Tanveer, Binish},
 title = {What is DevOps? A Systematic Mapping Study on Definitions and Practices},
@@ -54,7 +62,7 @@ series = {XP '16 Workshops}
 @ARTICLE{docker_security,  author={Combe, Theo and Martin, Antony and Di Pietro, Roberto},  journal={IEEE Cloud Computing},   title={To Docker or Not to Docker: A Security Perspective},   year={2016},  volume={3},  number={5},  pages={54-62},  doi={10.1109/MCC.2016.100}}
  } 
  @misc{docker:dockerd,
-  author = "Docker Inc.",
+  author = {Docker},
   title = "{Daemon CLI (dockerd)}",
   year = "2022",
   howpublished = {\url{https://docs.docker.com/engine/reference/commandline/dockerd/}},
@@ -62,7 +70,7 @@ series = {XP '16 Workshops}
 }
 
 @misc{docker:security,
-  author = "Docker Inc.",
+  author = {Docker},
   title = "Docker Security",
   year = "2022",
   howpublished = {\url{https://docs.docker.com/engine/security/}},
@@ -70,7 +78,7 @@ series = {XP '16 Workshops}
 }
 
 @misc{docker:network,
-  author = "Docker Inc.",
+  author = {Docker},
   title = "Networking overview",
   year = "2022",
   howpublished = {\url{https://docs.docker.com/network/}},
@@ -78,7 +86,7 @@ series = {XP '16 Workshops}
 }
 
 @misc{docker:iptables,
-  author = "Docker Inc.",
+  author = {Docker},
   title = "Docker and iptables",
   year = "2022",
   howpublished = {\url{https://docs.docker.com/network/iptables/}},
