Something on the Tools, readthrough, add some todo stuff

--- a/sample.bib
+++ b/sample.bib
@@ -49,6 +49,22 @@
   note = "[Online; accessed 10-February-2022]"
 }
 
+@misc{docker:install,
+    author = {Docker},
+    title = {Install Docker Engine},
+    year = "2022",
+    howpublished={\url{https://docs.docker.com/engine/install/}},
+    note = "[Online; accessed 19-February-2022]"
+}
+
+@misc{docker:windows,
+    author = {Docker},
+    title = {Install Docker Desktop on Windows},
+    year = "2022",
+    howpublished={\url{https://docs.docker.com/desktop/windows/install/}},
+    note = "[Online; accessed 19-February-2022]"
+}
+
 @inproceedings{Jabbari_devops,
 author = {Jabbari, Ramtin and bin Ali, Nauman and Petersen, Kai and Tanveer, Binish},
 title = {What is DevOps? A Systematic Mapping Study on Definitions and Practices},
