--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ In this section we will be discussing the Docker architecture and its vital comp
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{docker-overview}
-    \caption{Overview of the Docker Architecture\cite{docker:overview}}
+    \caption{Overview of the Docker Architecture where we can see the vital components (Client, Host and Registry) and the sub components they provide \cite{docker:overview}}
     \label{fig:overview}
 \end{figure}
 
@@ -64,7 +64,7 @@ Docker Images are read-only binary files that are used to build containers \cite
 
 \subsubsection{Docker Containers}
 
-Docker Containers are isolated environments which runs applications \citep{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application. Running containers are isolated from other containers and also have a good isolation from the host machine \citep{docker:security}. Containers can be connected to networks and storages.
+Docker Containers are isolated environments which runs applications \citep{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application. Running containers are isolated from other containers and also have a good isolation from the host machine \citep{docker:security}. Containers can be connected to networks and storages and in this way the isolation to the host machine can be configured.
 
 \subsubsection{Docker Networking}
 
@@ -72,7 +72,7 @@ Docker uses \textit{iptables} rules on Linux hosts to provide network isolation 
 
 \begin{itemize}
     \item \textbf{bridge}: The default driver. Used when multiple containers on the same host need to communicate with eachother.
-    \item \textbf{host}: Containers use the Docker host's networking directly.
+    \item \textbf{host}: Containers use the Docker host's networking layer directly.
     \item \textbf{overlay}: Used to connect multiple Docker daemons together. Should be used if two containers are on different Docker hosts.
     \item \textbf{none}: Disables container networking.  
 \end{itemize}
@@ -81,7 +81,9 @@ Docker also supports third-party network plugins, user-defined IP addressing and
 
 \subsubsection{Docker Storage}
 
-Data stored within the container are non-persistent and the data will disappear once the container stops running \citep{aquasec:docker_architecture}. For persistent storage Docker offer four options – Data Volumes, Data Volume Container, Directory Mounts and Storage plugins. Data volumes are located on the hosts file system and can be shared with many containers. A data volume container is a dedicated container that hosts a volume from the host. Each container using the volume connects to the container that hosts the persistent storage. Using Directory mounting, a container can have access to any folder on the host and with storage plugins containers can use persistent storage that is for example hosted on the cloud.
+Data stored within the container are non-persistent and the data will disappear once the container stops running \citep{aquasec:docker_architecture}. For persistent storage Docker offer four options – Data Volumes, Data Volume Container, Directory Mounts and Storage plugins. 
+
+Data volumes are located on the hosts file system and can be shared with many containers. A data volume container is a dedicated container that hosts a volume from the host. Each container using the volume connects to the container that hosts the persistent storage. Using Directory mounting, a container can have access to any folder on the host and with storage plugins containers can use persistent storage that is for example hosted on the cloud.
 
 \subsection{Docker Registry}
 
@@ -91,13 +93,15 @@ A Docker registry is a service for storing and downloading images \citep{aquasec
 
 The qualities (-ilities) that the TUS claims to support (what?) and justifications for the claims (how?)
 
+\textbf{Highlight one quality (-ility) that the TUS claims to support; give some examples that can justify the claim}
+
 Based on how Docker is built, the system has some qualities hoisted in it. In this section, we will list some important qualities from the architectural and agile perspective, if you decide to use Docker in your infrastructure. 
 
 \subsection{Portability}
 One key aspect of Docker is its Portability. With software portability, we refer to the usability of the same software in different environments, such as the underlying operating system or hardware \citep{wiki:Software_portability}. Portability is achieved based on how the Docker technology is built. Each container includes all the dependencies required for the application to work and only requires an underlying operating system and infrastructure that supports the Docker Engine \citep{hy:DevOps_with_Docker}.
 
 \subsection{Deployability}
-As Docker images are versionable, this gives the possibility to easily test, roll back and deploy applications\cite{hentsu:benefits}. As Docker images are smaller then Virtual Machine images, deploying an image to production is fast and results in a short downtime in a production environment. 
+As Docker images are versionable, this gives the possibility to easily test, roll back and deploy applications\cite{hentsu:benefits}. As Docker images are smaller then Virtual Machine images, deploying an image to production is fast and results in a short downtime when deploying to production environment. 
 
 \subsection{Security}
 There was a paper about this in IEEE iirc, going to find it later. But at least with docker, your software is isolated from other software.
@@ -111,12 +115,19 @@ Docker separates all applications into their own virtual environments. With this
 \section{Architectural impact}
 
 What aspect of application/system architecture is affected by using it and how?
+Architectural impact - give an example of how the application/system architecture is affected by using it
+https://devopswithdocker.com/part-1/1-getting-started
+"Works on my machine", different versions for different containers, isolation?
 
 \section{Limitations}
 
 What is it not suited for (any inherent limitations or reported issues)?
 
 \section{Docker Tools}
+
+Docker Engine is available on the common operating system, such as Windows, MacOS and Linux distributions, and on the most common processor architectures, i.e. x86\_64, amd64, arm and aarch64 \cite{docker:install}.  On Windows and Mac the Docker tool set that contains all the necessary components to run Docker is called Docker Desktop. Currently for Linux they are developing this same tool set as well. With the help of Docker tools developers are able to run, terminate, build and manage images and containers easily without the need to install any additional programs to run an application on their local machine.
+
+Docker Desktop for Windows uses the Windows Subsystem for Linux 2 (WSL2) or Hyper-V hypervisor and Windows Containers feature, which is available on the most recent versions of 64-bit Windows 10 and 11\cite{docker:windows}.
 
 Tool support / automation provided (can be also from 3rd parties) to help application developers be more productive
 
