--- a/sample.bib
+++ b/sample.bib
@@ -115,5 +115,17 @@ series = {XP '16 Workshops}
   howpublished = {\url{https://docs.docker.com/network/iptables/}},
   note = "[Online; accessed 11-February-2022]"
 }
+@misc{docker:vs_vm,
+  author = {Docker},
+  title = "Docker vs. virtual machines",
+  year = "2022",
+  howpublished = {\url{https://www.slideshare.net/Docker/docker-birthday-3-intro-to-docker-slides}},
+  note = "[Online; accessed 20-February-2022]"
+}
+
+
+
+
+
  
  
