--- a/sample.bib
+++ b/sample.bib
@@ -82,7 +82,7 @@ keywords = {Software development method, DevOps practice, DevOps definition},
 location = {Edinburgh, Scotland, UK},
 series = {XP '16 Workshops}
 }
-@ARTICLE{docker_security,  author={Combe, Theo and Martin, Antony and Di Pietro, Roberto},  journal={IEEE Cloud Computing},   title={To Docker or Not to Docker: A Security Perspective},   year={2016},  volume={3},  number={5},  pages={54-62},  doi={10.1109/MCC.2016.100}}
+@ARTICLE{docker_security_paper,  author={Combe, Theo and Martin, Antony and Di Pietro, Roberto},  journal={IEEE Cloud Computing},   title={To Docker or Not to Docker: A Security Perspective},   year={2016},  volume={3},  number={5},  pages={54-62},  doi={10.1109/MCC.2016.100}}
  } 
  @misc{docker:dockerd,
   author = {Docker},
