--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % Use option lineno for line numbers 
 \renewcommand{\baselinestretch}{1.3}
 
-\title{Docker in Software Architecture}
+\title{Docker in Software Architecture – Technology brief (c)}
 
 \author[1]{Daniel Koch}
 \author[2]{Sebastian Sergelius}
@@ -17,6 +17,7 @@
 Docker is currently very popular in software development and software deployment. It promises many advantages that are relevant in modern
 software development, like scalability, maintainability, security, and portability. In this report, we study the architecture of Docker as well as Docker's
 architectural impact on software development.
+Writers defined with initials on sections and/or subsections.
 \end{abstract}
 
 \begin{document}
@@ -25,7 +26,7 @@ architectural impact on software development.
 \thispagestyle{empty}
 \pagebreak
 \tableofcontents
-\section{Introduction}
+\section{Introduction (DK/SS)}
 
 With the rise of DevOps and the use of Docker, containerization has become more and more relevant to think about even in software architecture. DevOps does not have any official definition.
 One formal definition is given by \cite{Jabbari_devops}: 
@@ -34,24 +35,27 @@ One formal definition is given by \cite{Jabbari_devops}:
 \end{displayquote}
 Another way to put DevOps is that it consists of the development of software and operations and that DevOps means that development, release, configuration, and monitoring are all done by the same people, rather than having separate teams for every part \citep{hy:DevOps_with_Docker}.
 
-Containerization is common as a part of DevOps. Docker is one of the most common containerization software since its release in 2013 \citep{aquasec:orchestration}. In this technology brief, we will explain what is meant by containerization, how it compares to virtual machines and how do you use docker as a part of software architecture.
+Containerization is common as a part of DevOps. Docker is one of the most common containerization software since its release in 2013 \citep{aquasec:orchestration}. In this technology brief, we will explain what is meant by containerization, how it compares to virtual machines and how do you use docker as a part of software architecture. 
+
+We will start by comparing Docker and Virtual Machines in chapter 2. In chapter 3 we examine the technical components of the thing under study. Chapter 4 describes the qualities that Docker has hoisted in it following by the architectural impact in chapter 5. The last two chapters, 6 and 7, will be on the limitations of Docker and tools that are available.
 
 
-\section{Docker and virtual machines}
+\section{Docker and virtual machines (DK)}
 
 Virtualization is a much older technology than Docker and virtual machines have been used for decades. To understand Docker a bit better, we need to compare
 it to virtual machines because it is important to understand that docker is not the same thing as a virtual machine. We can see the largest difference between Docker and virtual machines in Figure 1: Virtual machines always have their own Guest OS, but Docker does not. This means that with every virtual machine we need to ship a complete OS with them, but Docker uses the underlying OS through the Docker Engine. Therefore, shipping multiple Docker containers is much lighter than shipping multiple virtual machines. However, virtual machines give you more freedom and easier configurability. In real-world cases, they are usually used together in cloud environments: The client has a virtual machine on the cloud and runs multiple Docker containers on the virtual machine.
 
-[Parantele, lisää tekstiä?]
+[Enhance, more text?]
+[Should we have something here on namespaces, LXC/runC?]
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth]{docker_vs_vm.png}
     \caption{Docker vs. virtual machines \cite{docker:vs_vm}}
-    \label{fig:overview}
+    \label{fig:dockervsvm}
 \end{figure}
 
-\section{Docker Architecture}
+\section{Docker Architecture (SS)}
 
 In this section we will be discussing the Docker architecture and its vital components that builds the technology under study. The Docker architecture is based on a client-server model where the client is called Docker client and the server is called Docker Host \citep{docker:overview, aquasec:docker_architecture}. The client and the host do not necessarily need to be on the same system, as the client can communicate with the host using the Docker REST API through either a UNIX socket or a network interface. Docker images are written in a Dockerfile, which defines the steps how to build and run the image in a container. These built images can be stored in a private or public Docker Registry.
 
@@ -103,18 +107,19 @@ A Docker registry is a service for storing and downloading images \citep{aquasec
 
 \section{Quality Attributes}
 
-The qualities (-ilities) that the TUS claims to support (what?) and justifications for the claims (how?)
+[The qualities (-ilities) that the TUS claims to support (what?) and justifications for the claims (how?)]
+[Are we missing some important -ility?]
 
 Based on how Docker is built, the system has some qualities hoisted in it. In this section, we will list some important qualities from the architectural and agile perspective, if you decide to use Docker in your infrastructure. 
 
-\subsection{Portability}
+\subsection{Portability (SS)}
 One key aspect of Docker is its Portability. With software portability, we refer to the usability of the same software in different environments, such as the underlying operating system or hardware \citep{wiki:Software_portability}. Portability is achieved based on how the Docker technology is built. Each container includes all the dependencies required for the application to work and only requires an underlying operating system and infrastructure that supports the Docker Engine \citep{hy:DevOps_with_Docker}.
 
-\subsection{Deployability}
+\subsection{Deployability (SS)}
 As Docker images are versionable, this gives the possibility to easily test, roll back and deploy applications\citep{hentsu:benefits}. As Docker images are smaller then Virtual Machine images, deploying an image to production is fast and results in a short downtime when deploying to production environment. 
 
-\subsection{Security}
-Docker promises some security advantages \citep{docker:security}:
+\subsection{Security (DK)}
+Docker promises some security advantages if configured correctly \citep{docker:security}:
 \begin{itemize}
     \item  Docker namespace is isolated from other programs on the machine. It cannot access other software namespaces and other software cannot access Docker's namespaces. 
     \item Each container has its own network stack and doesn't get privileged access to other containers' sockets.
@@ -123,13 +128,13 @@ Docker promises some security advantages \citep{docker:security}:
 \end{itemize}
 [käsittele docker security research paper \citep{docker_security_paper}]
 
-\subsection{Scalability}
+\subsection{Scalability (DK)}
 Scalability is one of the main selling points of Docker and especially if bundled with microservice architecture the scalability is great. With Docker, you can easily deploy as many containers of your service as you need and even adjust the number of containers during runtime.
 
-\subsection{Maintainability}
+\subsection{Maintainability (DK)}
 Docker separates all applications into their own virtual environments. With this, different applications don't interfere with other applications and each application can have all its dependencies easily and reliably every time without affecting other software. This allows different applications to use different versions of the same dependencies.
 
-\section{Architectural impact}
+\section{Architectural impact (DK)}
 
 [What aspect of application/system architecture is affected by using it and how?
 Architectural impact - give an example of how the application/system architecture is affected by using it
@@ -143,18 +148,19 @@ that constructing microservices software becomes much less cumbersome and more e
 [here for isolation]
 [here for different versions of the same dependencies in different containers on the same software]
 
-\section{Limitations}
+\section{Limitations (SS)}
 
-What is it not suited for (any inherent limitations or reported issues)?
-Docker is not suited for simple applications or  
+As Docker adds a layer between the container and the host kernel it doesn't suit well if you need to get full performance from your underlying hardware, although it still more lightweight then VMs\citep{cloudsavvy:not_to_use}. Comparison to virtual machines, containers are not able to run different operating systems that would require a different kernel than the underlying host machine. For simple monolith architectures and desktop applications with high graphical requirements Docker containerisation does not offer the possible qualities that the Docker orchestration and containerization provides.
 
-\section{Docker Tools}
+[Perhaps something on architectural impact and/or more on the graphical part]
+
+\section{Docker Tools (SS)}
 
 Docker Engine is available on the common operating system, such as Windows, MacOS and Linux distributions, and on the most common processor architectures, i.e. x86\_64, amd64, arm and aarch64 \cite{docker:install}.  On Windows and Mac the Docker tool set that contains all the necessary components to run Docker is called Docker Desktop. Currently for Linux they are developing this same tool set as well. With the help of Docker tools developers are able to run, terminate, build and manage images and containers easily without the need to install any additional programs to run an application on their local machine.
 
 Docker Desktop for Windows uses the Windows Subsystem for Linux 2 (WSL2) or Hyper-V hypervisor and Windows Containers feature, which is available on the most recent versions of 64-bit Windows 10 and 11\cite{docker:windows}.
 
-Tool support / automation provided (can be also from 3rd parties) to help application developers be more productive
+[Docker orchestration / Kubernetes / Docker swarm?]
 
 \bibliography{sample}
 
